--- a/index.html
+++ b/index.html
@@ -313,10 +313,55 @@
             </span>
         </footer>
         <!-- End Footer -->
-
+        <!-- Start Scroll Top -->
         <section class="scrollup" id="scrollUp">
             <i class="fa-solid fa-angles-up"></i>
         </section>
+        <!-- End Scroll Top -->
+        <!-- Start Shopping -->
+        <section class="shopping section" id="shopping">
+            <div class="shopping_container container grid">
+                <div class="shopping_icon" id="ShopIcon">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+
+                <div class="shopping_content">
+                    <article class="shopping_data">
+                        <div class="shopping_img">
+                            <img src="assets/images/favorite-bread-1.png" alt="">
+                        </div>
+                        <div class="shopping_title">
+                            <h2 class="shoping_name">asas</h2>
+                            <p class="shopping_price">234</p>
+                        </div>
+                    </article>
+                    <article class="shopping_data">
+                        <div class="shopping_img">
+                            <img src="assets/images/favorite-bread-1.png" alt="">
+                        </div>
+                        <div class="shopping_title">
+                            <h2 class="shoping_name">asas</h2>
+                            <p class="shopping_price">234</p>
+                        </div>
+                    </article>
+                    <article class="shopping_data">
+                        <div class="shopping_img">
+                            <img src="assets/images/favorite-bread-1.png" alt="">
+                        </div>
+                        <div class="shopping_title">
+                            <h2 class="shoping_name">asas</h2>
+                            <p class="shopping_price">234</p>
+                        </div>
+                    </article>
+
+                    <div class="total" id="total">
+                        Total:
+                        <span>333$</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Shopping -->
     </main>
     <!-- End Main -->
     <!-- Font Awesome Js -->
