--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery</title>
+    <link rel="shortcut icon" href="assets/images/favorite-bread-2.png" type="image/x-icon">
     <!-- Font Awesome Css -->
     <link rel="stylesheet" href="assets/css/all.css">
     <!-- google font -->
@@ -320,6 +321,8 @@
         <!-- End Scroll Top -->
     </main>
     <!-- End Main -->
+
+    <script src="assets/js/scrollreveal.min.js"></script>
     <!-- Font Awesome Js -->
     <script src="assets/js/all.js"></script>
     <!-- Js file -->
