--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+    <section class="loading" id="loading">
+        <img src="assets/images/favorite-bread-2.png" alt="">
+    </section>
     <!-- Start Header -->
     <header class="header" id="header">
         <nav class="nav container">
